homework2/NOTE
Pulling https://github.com/annreshet/IS-2020-prog-2-sem/homework2
Pull finished
polynomial.cpp: In member function 'bool Polynomial::operator==(const Polynomial&)':
polynomial.cpp:75:45: error: no matching function for call to 'Polynomial::RemoveZeros(Polynomial&)'
   75 |         Polynomial first = RemoveZeros(*this);
      |                                             ^
polynomial.cpp:60:6: note: candidate: 'void Polynomial::RemoveZeros()'
   60 | void Polynomial::RemoveZeros() {
      |      ^~~~~~~~~~
polynomial.cpp:60:6: note:   candidate expects 0 arguments, 1 provided
polynomial.cpp:76:46: error: no matching function for call to 'Polynomial::RemoveZeros(const Polynomial&)'
   76 |         Polynomial second = RemoveZeros(other);
      |                                              ^
polynomial.cpp:60:6: note: candidate: 'void Polynomial::RemoveZeros()'
   60 | void Polynomial::RemoveZeros() {
      |      ^~~~~~~~~~
polynomial.cpp:60:6: note:   candidate expects 0 arguments, 1 provided
polynomial.cpp: In member function 'Polynomial Polynomial::operator/(int)':
polynomial.cpp:200:28: error: no matching function for call to 'Polynomial::RemoveZeros(Polynomial&)'
  200 |     return RemoveZeros(temp);
      |                            ^
polynomial.cpp:60:6: note: candidate: 'void Polynomial::RemoveZeros()'
   60 | void Polynomial::RemoveZeros() {
      |      ^~~~~~~~~~
polynomial.cpp:60:6: note:   candidate expects 0 arguments, 1 provided
make: *** [makefile:2: all] Error 1



